added word popularity searches